@@ -22,11 +22,15 @@
       up ORM decision making [ticket:593]
 - mysql
     - added 'fields' to reserved words [ticket:590]
+- oracle
+    - datetime fixes: got subsecond TIMESTAMP to work [ticket:604],
+      added OracleDate which supports types.Date with only year/month/day
 - sqlite
     - sqlite better handles datetime/date/time objects mixed and matched
       with various Date/Time/DateTime columns
 
     
+>>>>>>> .r2741
 0.3.8
 - engines
     - added detach() to Connection, allows underlying DBAPI connection
